# biliup-app

./: .gitignore  Bilibili.py  README.md  config.yaml  package-lock.json  package.json  postcss.config.js  requirements.txt  rollup.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml  pre-release.yml  release.yml
biliup/plugins/: acfun.py  douyin.py  egame.py  twitch.py
common/: __init__.py  event.py
engine/: __init__.py  downloader.py  handler.py  upload.py
engine/db/: LinksId.py  __init__.py
engine/plugins/: __init__.py  bilibili.py  general.py  huya.py  twitch.py
public/: global.css
src/: App.svelte  Append.svelte  Drag-and-drop.svelte  Home.svelte  Login.svelte  Modal.svelte  Partition.svelte  Pop.svelte  Progress.svelte  Sidebar.svelte  Upload.svelte  common.ts  global.d.ts  main.ts  store.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: build.rs  error.rs  helper.rs  lib.rs  main.rs  video.rs
src/lib/: constants.ts
