[package]
name = "app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
reqwest = { version = "0.11", features = ["json",] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde_yaml = "0.8"
biliup = { version = "0.1.8" }
futures = "0.3.17"
bytes = "1.1.0"


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
