[package]
name = "biliup-app"
version = "0.5.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
thiserror = "1.0.61"
reqwest = { version = "0.12.4", features = ["json"] }
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
biliup = { git = "https://github.com/ForgQi/biliup-rs.git", rev = "20b2b8c" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
tracing-appender = "0.2.3"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
